chore(release): 重构发布流程并同步版本到Cargo.toml
- 删除 TypeScript 版 release-it 配置，新增 JSON 配置文件提升兼容性
- 将版本同步脚本重命名为 sync-version.cjs，改为从 package.json 中读取版本号
- 移除版本格式校验，简化同步逻辑，只更新 Cargo.toml 中版本字段
- 修改 release 钩子，发布完成后依次执行版本同步和 Cargo 包发布脚本
- 更新 package.json 脚本名称，保持命令语义清晰一致

--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "build": "rollup -c",
     "prepublishOnly": "pnpm build",
     "pretest": "pnpm build",
-    "updateVersion": "node scripts/update-version.cjs",
-    "publish": "node scripts/publish-cargo.cjs",
+    "syncVersion": "node scripts/sync-version.cjs",
+    "publishCargo": "node scripts/publish-cargo.cjs",
     "release": "release-it"
   },
   "dependencies": {
