chore(release): 更新发布流程钩子配置
- 修改 after:bump 钩子为执行 pnpm syncVersion
- 保留 after:npm:release 钩子执行 pnpm publishCargo
- 优化发布流程步骤分离与执行顺序

--- a/.release-it.json
+++ b/.release-it.json
@@ -9,6 +9,7 @@
     "publish": true
   },
   "hooks": {
-    "after:npm:release": "pnpm syncVersion && pnpm publishCargo"
+    "after:bump": "pnpm syncVersion",
+    "after:npm:release": "pnpm publishCargo"
   }
 }
