chore(release): 允许 npm 发布相同版本号
- 在发布配置中添加 allowSameVersion 选项
- 允许发布工具推送同一版本号的包
- 确保版本同步钩子在版本提升后执行

--- a/.release-it.json
+++ b/.release-it.json
@@ -6,7 +6,8 @@
     "pushRepo": "origin"
   },
   "npm": {
-    "publish": true
+    "publish": true,
+    "allowSameVersion": true
   },
   "hooks": {
     "after:bump": "pnpm syncVersion",
