chore(release): 更新版本号并优化发布配置
- 将版本号从0.2.0更新至0.2.1
- 移除 npm 配置中的 allowSameVersion 字段
- 在同步版本脚本中添加 Git add 操作以确保 Cargo.toml 参与提交
- 使发布流程更加规范和自动化

--- a/.release-it.json
+++ b/.release-it.json
@@ -6,8 +6,7 @@
     "pushRepo": "origin"
   },
   "npm": {
-    "publish": true,
-    "allowSameVersion": true
+    "publish": true
   },
   "hooks": {
     "after:bump": "pnpm syncVersion",
