--- a/.release-it.json
+++ b/.release-it.json
@@ -10,6 +10,6 @@
   },
   "hooks": {
     "after:bump": "pnpm syncVersion",
-    "after:npm:release": "pnpm publishCargo"
+    "after:git:release": "pnpm publishCargo"
   }
 }
